fix relative links

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="/img/favicon.ico">
+  <link rel="icon" href="img/favicon.ico">
   <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body ng-app="party">
   <div class="cover-image">
-    <img src="/img/rebirth.jpg" alt="Rebirth Realty House" class="background animate-blur rebirth">
-    <img src="/img/year.jpg" alt="2016" class="background animate-pulse year">
+    <img src="img/rebirth.jpg" alt="Rebirth Realty House" class="background animate-blur rebirth">
+    <img src="img/year.jpg" alt="2016" class="background animate-pulse year">
   </div>
   <div class="content center" ng-controller="ContentCtrl as vm">
     <h1>You&rsquo;re invited!</h1>
@@ -23,7 +23,7 @@
   </div>
   <!--<p class="center">Let's start 2016 in style.</p>-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="/angular.min.js"></script>
+  <script src="angular.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
