fix(index.html): Mi -> MI

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>
       Rebirth Realty<br>
       760 Virginia Park<br>
-      Detroit, Mi 48202<br>
+      Detroit, MI 48202<br>
     </p>
     <button ng-click="vm.rsvp()" ng-show="!vm.isComing">RSVP</button>
     <p class="prank" ng-show="vm.isComing">Lol, you don't need to RSVP! Just show up and bring your cool friends.</p>
