--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="img/favicon.ico">
   <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <meta property="og:image" content="img/year.jpg" />
+  <meta property="og:image:width" content="640" />
+  <meta property="og:image:height" content="442" />
 </head>
 <body ng-app="party">
   <div class="cover-image">
