--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta property="og:image" content="img/year.jpg" />
   <meta property="og:image:width" content="640" />
   <meta property="og:image:height" content="442" />
+  <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+  <script type="text/javascript">stLight.options({publisher: "4e31d44c-8bff-4c5b-9f1f-43b1bf5213c9", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 </head>
 <body ng-app="party">
   <div class="cover-image">
@@ -21,8 +23,12 @@
       760 Virginia Park<br>
       Detroit, MI 48202<br>
     </p>
-    <button ng-click="vm.rsvp()" ng-show="!vm.isComing">RSVP</button>
-    <p class="prank" ng-show="vm.isComing">Lol, you don't need to RSVP! Just show up and bring your cool friends.</p>
+    <button ng-show="!vm.isComing" ng-click="vm.rsvp()">RSVP</button>
+    <p ng-show="vm.isComing" class="prank">Lol, you don't need to RSVP! Just show up and <a href="https://www.facebook.com/events/578526965634471/">bring your cool friends</a>.</p>
+    <div ng-show="vm.isComing" class="center">
+      <span class='st_facebook_large' displayText='Facebook'></span>
+      <span class='st_twitter_large' displayText='Tweet'></span>
+    </div>
   </div>
   <!--<p class="center">Let's start 2016 in style.</p>-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
